--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -24,7 +24,7 @@ jobs:
 
       # Runs a packer build
       - name: Run a one-line script
-        with:
+        env:
           aws_access_key:  ${{secrets.AWS_AMI_ACCESS_KEY}
           aws_secret_key: ${{secrets.AWS_AMI_SECRET_KEY}}
           aws_region: ${{secrets.AWS_AMI_REGION}}
