--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+git s
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -25,8 +25,8 @@ jobs:
       # Runs a packer build
       - name: Run a one-line script
         with:
-          aws_access_key:  ${{secrets.AWS_AMI_ACCESS_KEY}
-          aws_secret_key: ${{secrets.AWS_AMI_SECRET_KEY}}
-          aws_region: ${{secrets.AWS_AMI_REGION}}
-          subnet_id: ${{secrets.SUBNET_AMI_ID}}
+          aws_access_key:  ${{ secrets.AWS_AMI_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_AMI_SECRET_KEY }}
+          aws_region: ${{ secrets.AWS_AMI_REGION }}
+          subnet_id: ${{ secrets.SUBNET_AMI_ID }}
         run: packer validate ubuntu-ami.json
