--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -25,9 +25,9 @@ jobs:
 
       - shell: bash
         env:
-          aws_access_key:  ${{secrets.AWS_AMI_ACCESS_KEY}
-          aws_secret_key: ${{secrets.AWS_AMI_SECRET_KEY}}
-          aws_region: ${{secrets.AWS_AMI_REGION}}
-          subnet_id: ${{secrets.SUBNET_AMI_ID}}
+          aws_access_key:  ${{ secrets.AWS_AMI_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_AMI_SECRET_KEY }}
+          aws_region: ${{ secrets.AWS_AMI_REGION }}
+          subnet_id: ${{ secrets.SUBNET_AMI_ID }}
         run: packer validate -var "$aws_access_key" / -var "$aws_secret_key" / -var "$aws_region" / -var "$subnet_id" ubuntu-ami.json
 
