--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -29,5 +29,5 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_AMI_SECRET_KEY }}
           aws_region: ${{ secrets.AWS_AMI_REGION }}
           subnet_id: ${{ secrets.SUBNET_AMI_ID }}
-        run: packer validate -var "$aws_access_key" / -var "$aws_secret_key" / -var "$aws_region" / -var "$subnet_id" ubuntu-ami.json
+        run: packer validate ubuntu-ami.json
 
