--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -30,4 +30,5 @@ jobs:
           aws_region: ${{ secrets.AWS_AMI_REGION }}
           subnet_id: ${{ secrets.SUBNET_AMI_ID }}
         run: packer validate ubuntu-ami.json
+             packer validate -var aws_access_key ubuntu-ami.json
 
