changes in ami file

--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -30,5 +30,5 @@ jobs:
           aws_region: ${{ secrets.AWS_AMI_REGION }}
           subnet_id: ${{ secrets.SUBNET_AMI_ID }}
         run: packer validate ubuntu-ami.json,
-             packer build -var 'aws_access_key="$aws_access_key"' \ -var 'aws_secret_key="$aws_secret_key"' \ -var 'aws_region="$aws_region"' \  -var 'subnet_id="$subnet_id"' ubuntu-ami.json
+             packer build -var 'aws_access_key'="$aws_access_key" \ -var 'aws_secret_key'="$aws_secret_key" \ -var 'aws_region'="$aws_region" \  -var 'subnet_id'="$subnet_id" ubuntu-ami.json
 
