--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -25,10 +25,8 @@ jobs:
 
       - shell: bash
         env:
-          aws_access_key:  ${{ secrets.AWS_AMI_ACCESS_KEY }}
+          aws_access_key:  ${{ secrets.AWS_AMI_ACCESS_KEY }},
           aws_secret_key: ${{ secrets.AWS_AMI_SECRET_KEY }}
-          aws_region: ${{ secrets.AWS_AMI_REGION }}
-          subnet_id: ${{ secrets.SUBNET__AMI_ID }}
         run: |
          packer build -var ''aws_access_key'="$aws_access_key"'  -var ''aws_secret_key'="$aws_secret_key"'  ubuntu-ami.json
 
