--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -13,6 +13,7 @@ jobs:
         uses: riznob/packer-build-action@v1.1
         with:
           templateFile: 'ubuntu-ami.json'
+          varFile: 'ubuntu-ami.json'
           workingDir: '.'
         env:
           aws_access_key: ${{ secrets.AWS_AMI_ACCESS_KEY }}
