--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -1,31 +1,19 @@
-# This is a basic workflow to help you get started with Actions
+name: Build an AMI using Packer
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push:
-    branches: [ a4 ]
-  pull_request:
-    branches: [ a4 ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - 'a4'
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  packer-ami-build:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a packer build
-
-      - shell: bash
-        with: 'packer build ubuntu-ami.json'
+      - name: Packer AMI Build
+        uses: zmingxie/packer-ami-builder@master
+        with:
+          packerArgs: 'build ubuntu-ami.json'
+          workDir: '.'
         env:
-          aws_access_key:  ${{ secrets.AWS_AMI_ACCESS_KEY }},
-          aws_secret_key: ${{ secrets.AWS_AMI_SECRET_KEY }}
-        
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_AMI_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_AMI_SECRET_KEY }}
