--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -18,4 +18,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_AMI_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_AMI_SECRET_KEY }}
-          prod_account_id: ${{ secrets.PROD_ACCOUNT_ID }}
+          prod_account_id: [${{ secrets.PROD_ACCOUNT_ID }}]
