--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: echo Hello world $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY $prod_account_id!
+        run: packer build -var 'aws_access_key'=$AWS_ACCESS_KEY_ID  -var 'aws_secret_key'=$AWS_SECRET_ACCESS_KEY  ubuntu-ami.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_AMI_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_AMI_SECRET_KEY }}
