--- a/.github/workflows/ubuntu-ami_ga.yml
+++ b/.github/workflows/ubuntu-ami_ga.yml
@@ -4,7 +4,7 @@ name: CI
 # events but only for the a4 branch
 on:
   pull_request:
-    branches: [ main ]
+    branches:  main 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
