--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,25 +12,19 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  make:
-    # The type of runner that the job will run on
+  packer:
     runs-on: ubuntu-latest
+    name: packer
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      # build artifact
+      - name: Build Artifact
+        uses: santisaez/packer-action@v1
         with:
-         path: main
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Building ami and sharing it with prod account using ami
-        run: packer build -var 'aws_access_key'=$AWS_ACCESS_KEY_ID  -var 'aws_secret_key'=$AWS_SECRET_ACCESS_KEY -var prod_account_id=$prod_account_id -var 'aws_region'=$aws_region -var 'subnet_id'=$subnet_id  ubuntu-ami.json
+         template: ubuntu-ami.json
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_AMI_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_AMI_SECRET_KEY }}
