--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -5,6 +5,8 @@ name: CI
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
